[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/textures/hard.png" type="Texture" id=1]
[ext_resource path="res://scenes/tendril/base.gd" type="Script" id=2]
[ext_resource path="res://scenes/tendril/end.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/soft.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/base_death.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/pass.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/tendril/trail.gd" type="Script" id=7]

[sub_resource type="CanvasItemMaterial" id=1]

render_priority = 0
blend_mode = 1
light_mode = 1

[sub_resource type="Gradient" id=2]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]

gradient = SubResource( 2 )
width = 2048

[sub_resource type="Curve" id=4]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]

width = 2048
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 40.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.01
scale_random = 0.01
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false

[sub_resource type="ParticlesMaterial" id=9]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 240.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.01
scale_random = 0.02
color_ramp = SubResource( 3 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false

[sub_resource type="Animation" id=7]

resource_name = "death"
length = 1.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "remove_self"
} ]
}

[sub_resource type="Animation" id=8]

resource_name = "spawn"
length = 5.0
loop = false
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_alive"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="base" type="Sprite" groups=[
"base",
]]

modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0.501961 )
material = SubResource( 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="end" type="Node2D" parent="."]

use_parent_material = true
script = ExtResource( 3 )

[node name="particles" type="Particles2D" parent="end"]

use_parent_material = true
emitting = false
amount = 128
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 6 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 1
v_frames = 1

[node name="particles_explode" type="Particles2D" parent="end"]

use_parent_material = true
emitting = false
amount = 128
lifetime = 1.0
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 1.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 9 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 1
v_frames = 1

[node name="end_sprite" type="Sprite" parent="end"]

use_parent_material = true
texture = ExtResource( 4 )

[node name="death_sound" type="AudioStreamPlayer2D" parent="end"]

stream = ExtResource( 5 )
volume_db = -2.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "sfx"
area_mask = 1

[node name="cross_sound" type="AudioStreamPlayer2D" parent="end"]

stream = ExtResource( 6 )
volume_db = -6.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "sfx"
area_mask = 1

[node name="trail" type="Area2D" parent="."]

use_parent_material = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )

[node name="animation" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/death = SubResource( 7 )
anims/spawn = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "spawn"

[connection signal="dragged" from="end" to="trail" method="add_line"]

[connection signal="death" from="trail" to="." method="on_death"]


